--- a/css/quentin.css
+++ b/css/quentin.css
@@ -99,6 +99,9 @@
 .add-control .form-control {
   padding-right: 25px;
 }
+.add-control #settingsbtn {
+  padding-right: 25px;
+}
 .add-control .refresh {
   position: absolute;
   top: 8px;
@@ -131,6 +134,26 @@
   color: #cecece;
 }
 .form-control:focus {
+  -webkit-box-shadow: 0 0 15px rgba(0,0,0,0.2);
+          box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+#settingsbtn,
+#settingsbtn:focus,
+#settingsbtn:active,
+#settingsbtn:active:focus {
+  border: none;
+  padding: 10px 15px;
+  outline: none;
+}
+#settingsbtn {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  color: #131313;
+	background-color: #cecece;
+}
+#settingsbtn:focus {
   -webkit-box-shadow: 0 0 15px rgba(0,0,0,0.2);
           box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
