Change for Longterm and Planning tasks

--- a/css/quentin.css
+++ b/css/quentin.css
@@ -472,6 +472,14 @@ svg {
 .labelmust {
 	color: #E9383B;
 }
+
+.labellongterm {
+	font-style: italic;
+}
+
+.labelplan {
+	color: slategray;
+}
 /* .col-xs-offset-3 {
     margin-left: 10%;
 }
